--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "band_name_server",
+  "name": "01-band_names_server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,17 +8,16 @@
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.12.1",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5",
-    "socket.io": "^4.1.2"
+    "mongoose": "^6.5.4",
+    "socket.io": "^4.5.2"
   }
 }
